force-app/main/default/objects/RC_college__c/fields/college_city__c.field-meta.xml
<CustomField>
    <fullName>college_city__c</fullName>
    <description>City where the college is situated</description>
    <inlineHelpText>Enter the college city</inlineHelpText>
    <label>college_city</label>
    <type>TextArea</type>
</CustomField>