force-app/main/default/objects/RC_college__c/fields/college_country__c.field-meta.xml
<CustomField>
    <fullName>college_country__c</fullName>
    <description>The country where the college is situated</description>
    <inlineHelpText>Enter the Country where the college is situated in.</inlineHelpText>
    <label>college_country</label>
    <type>TextArea</type>
</CustomField>