force-app/main/default/objects/RC_college__c/fields/college_email__c.field-meta.xml
<CustomField>
    <fullName>college_email__c</fullName>
    <description>The email of the college</description>
    <inlineHelpText>Enter the email of the college</inlineHelpText>
    <label>college_email</label>
    <type>TextArea</type>
</CustomField>