force-app/main/default/objects/RC_college__c/fields/college_name__c.field-meta.xml
<CustomField>
    <fullName>college_name__c</fullName>
    <description>The name of the college</description>
    <inlineHelpText>Enter the name of the college.</inlineHelpText>
    <label>college_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>