force-app/main/default/objects/RC_college__c/fields/college_password__c.field-meta.xml
<CustomField>
    <fullName>college_password__c</fullName>
    <description>The password of the college account</description>
    <inlineHelpText>Enter the password</inlineHelpText>
    <label>college_password</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>