force-app/main/default/objects/RC_college__c/fields/college_phone__c.field-meta.xml
<CustomField>
    <fullName>college_phone__c</fullName>
    <description>The contact number of the college</description>
    <inlineHelpText>Enter the contact number of the college</inlineHelpText>
    <label>college_phone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>