force-app/main/default/objects/RC_college__c/fields/college_postal_zip__c.field-meta.xml
<CustomField>
    <fullName>college_postal_zip__c</fullName>
    <description>College Postal/Zip code</description>
    <inlineHelpText>Enter the college Postal/ZIP code</inlineHelpText>
    <label>college_postal_zip_code</label>
    <type>TextArea</type>
</CustomField>