force-app/main/default/objects/RC_college__c/fields/college_state__c.field-meta.xml
<CustomField>
    <fullName>college_state__c</fullName>
    <description>The state in which the college exist in</description>
    <inlineHelpText>Enter the state</inlineHelpText>
    <label>college_state</label>
    <type>TextArea</type>
</CustomField>