force-app/main/default/objects/RC_college__c/fields/college_tpo_email__c.field-meta.xml
<CustomField>
    <fullName>college_tpo_email__c</fullName>
    <description>The email id of the training placement officer</description>
    <inlineHelpText>Enter the email id of the training placement officer.</inlineHelpText>
    <label>college_tpo_email</label>
    <type>TextArea</type>
</CustomField>