force-app/main/default/objects/RC_college__c/fields/college_tpo_name__c.field-meta.xml
<CustomField>
    <fullName>college_tpo_name__c</fullName>
    <description>The name of the Training Placement officer for this college/event.</description>
    <inlineHelpText>Enter the name of the Training Placement officer.</inlineHelpText>
    <label>college_tpo_name</label>
    <type>TextArea</type>
</CustomField>