force-app/main/default/objects/RC_college__c/fields/college_tpo_phone__c.field-meta.xml
<CustomField>
    <fullName>college_tpo_phone__c</fullName>
    <description>The contact number of the training placement officer</description>
    <inlineHelpText>Enter the contact number of the training placement officer</inlineHelpText>
    <label>college_tpo_phone</label>
    <type>Phone</type>
</CustomField>